# proof-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: 1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
plugins/proof-routing/: .mcp.json  README.md
src/proof_cli/: __init__.py  analysis.py  automation.py  (+41 more)
tests/: test_automation.py  test_automation_eval.py  test_automation_policy.py  test_bugs.py  test_checks.py  test_cli.py  test_collaboration.py  test_debug_tasks.py  test_domain_packs.py  test_dsl.py  test_evidence.py  test_exchange.py  test_export.py  test_formal_bridge.py  test_formalization_recommendations.py  test_governance.py  test_obligations.py  test_phase9_validation.py  test_proof_patterns.py  test_proof_routing_plugin.py  test_proof_state.py  test_publication.py  test_reasoning.py  test_recommendations.py  test_references.py  test_retrieval.py  test_reusable_assets.py  test_review.py  test_snapshot.py  test_storage.py  test_theorems.py  test_verification_broker.py  test_verification_ir.py  test_verification_results.py
(+155 files in other folders)
