[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathematical-proof-cli"
version = "0.1.0"
description = "CLI-first research proof OS"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "mcp>=1.27",
  "pytest>=8.0",
]

[project.scripts]
proof = "proof_cli.cli:app"
proof-codex = "proof_cli.codex_router:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
